# ai-paraphrasing-tool

./: .gitignore  README.md  rebuild-backend.bat  run-dev.bat
backend/: Cargo.toml  SHUTTLE_DEPLOYMENT.md  Shuttle.toml  rebuild-batch.bat
backend/ai-paraphrase-backend/: Cargo.toml
backend/ai-paraphrase-backend/src/: main.rs
backend/src/: main.rs
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: TextEditor.tsx
