[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
actix-cors = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35.1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15.0"
env_logger = "0.11.2"
log = "0.4.20"
anyhow = "1.0.79"
thiserror = "1.0.57"
