[package]
name = "ai-paraphrase-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-cors = "0.6.4"
shuttle-actix-web = "0.54.0"
shuttle-runtime = "0.54.0"
tokio = { version = "1.26.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
log = "0.4.20"
env_logger = "0.10.0"
anyhow = "1.0.75"
